Cambio de titulo

--- a/plantilla.html
+++ b/plantilla.html
@@ -4,7 +4,7 @@
 <<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
 <meta name="description" content="computacion del golfo">
 <meta name="keywords" content="computacion, escuela, principal">
-<title>CG PRINCIPAL</title>
+<title>CG PLANTILLA</title>
 
 	<!-- CSS -->
     <link href="css1/templatemo_style.css" rel="stylesheet" type="text/css" />
