Se editaron Los Valores

--- a/plantilla.html
+++ b/plantilla.html
@@ -108,14 +108,14 @@
         <img src="IMAGENES/valores.png" alt="Image 02" />
   <div class="lista">     
 <p><a>VALORES:</a> <br>
-1. Responsabilidad<br>
-2. Lealtad<br>
-3. Honestidad<br>
-4. Respeto<br>
-5. Disciplina<br>
-6. Calidad<br>
-7. Servicio<br>
-8. Humildad<br>
+1. Responsabilidad.<br>
+2. Lealtad.<br>
+3. Honestidad.<br>
+4. Respeto.<br>
+5. Disciplina.<br>
+6. Calidad.<br>
+7. Servicio.<br>
+8. Humildad.<br>
 </p>
    
 </ul>
